fixed overflow issue

--- a/index.css
+++ b/index.css
@@ -51,7 +51,7 @@ button:hover {
 
 .counter {
     height: 20px;
-    width: 60%;
+    min-width: 30%;
     padding: 10px;
     background-color: #44354A;
     border-radius: 50px;
